# TheOrchestra

./: .clang-format  .gitignore  .gitignore.txt  .gitmodules  CMakeLists.txt  InstrumentsOfTheOrcehstra.jucer  InstrumentsOfTheOrchestra.jucer  LICENSE  README.md  SampleManagement.py  build.py
Assets/InstrumentData/: Instruments.json
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  CustomPianoRoll.cpp  CustomPianoRoll.h  InstrumentData.h  InstrumentInfo.cpp  InstrumentInfo.h  InstrumentInfoModel.cpp  InstrumentInfoModel.h  InstrumentInfoView.cpp  InstrumentInfoView.h  Parameters.h  PianoRoll.cpp  PianoRoll.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Sampler.cpp  Sampler.h  SamplesManagement.cpp  SamplesManagement.h
cmake/: BuildInfo.cmake  CppCheck.cmake  Doxygen.cmake  Memcheck.cmake  ProjectOptions.cmake  Testing.cmake  buildinfo.h.in  cpm.cmake
scripts/: SampleManagement.py  argument_parser.py  build_runner.py  enums.py  env_config.py  paths.py  utils.py  versioning.py
src/: CMakeLists.txt
src/App/: Main.cpp
src/AudioProcessor/: PluginProcessor.cpp  PluginProcessor.h
src/FileManager/: FileManager.cpp  FileManager.h
src/InstrumentInfo/: InstrumentController.cpp  InstrumentController.h  InstrumentData.h  InstrumentInfo.cpp  InstrumentInfo.h  InstrumentInfoModel.cpp  InstrumentInfoModel.h  InstrumentInfoView.cpp  InstrumentInfoView.h
src/Logger/: CustomLogger.cpp  CustomLogger.h  Logging.cpp  Logging.h
src/Misc/: Helper.h  Parameters.h
src/OrchestraApp/: CMakeLists.txt  Main.cpp
src/OrchestraCore/: CMakeLists.txt
src/OrchestraCore/AudioProcessor/: PluginProcessor.cpp  PluginProcessor.h
src/OrchestraCore/CoreManager/: CoreManager.cpp  CoreManager.h
src/OrchestraCore/FileManager/: FileManager.cpp  FileManager.h
src/OrchestraCore/InstrumentInfo/: InstrumentController.cpp  InstrumentController.h  InstrumentInfo.h  InstrumentRange.h  InstrumentRegister.h  OrchestrationRole.h  PlayingTechnique.h  RegisterQuality.h  SignatureWork.h
src/OrchestraCore/Logger/: Logging.cpp  Logging.h
src/OrchestraCore/Misc/: Helper.h  JuceIncludes.h  Parameters.h
src/OrchestraCore/PianoRoll/: CustomPianoRoll.h
src/OrchestraCore/Sampler/: OrchestraSampler.cpp  OrchestraSampler.h  OrchestraSound.cpp  OrchestraSound.h  OrchestraVoice.cpp  OrchestraVoice.h  Sampler.cpp  Sampler.h  SamplesManagement.cpp  SamplesManagement.h
src/OrchestraCore/UserConfig/: UserConfig.cpp  UserConfig.h
src/OrchestraCore/Views/: CustomMenuBar.h
src/OrchestraUI/: CMakeLists.txt
src/OrchestraUI/Custom/: CustomComponent.cpp  CustomComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h
src/OrchestraUI/CustomComponent/: CustomComponent.h
src/OrchestraUI/CustomLookAndFeel/: CustomLookAndFeel.h
src/OrchestraUI/CustomMenuBar/: CustomMenuBar.h
src/OrchestraUI/Helper/: CreateEditor.cpp
src/OrchestraUI/InstrumentFamousWorks/: FamousWorksView.cpp  FamousWorksView.h
src/OrchestraUI/InstrumentHeading/: InstrumentView.cpp  InstrumentView.h
src/OrchestraUI/InstrumentInfo/: InformationView.cpp  InformationView.h
src/OrchestraUI/InstrumentQualities/: QualitiesView.cpp  QualitiesView.h
src/OrchestraUI/InstrumentRanges/: InstrumentRangesView.cpp  InstrumentRangesView.h
src/OrchestraUI/InstrumentRegisters/: RegisterView.cpp  RegisterView.h
src/OrchestraUI/InstrumentTechniques/: TechniquesView.cpp  TechniquesView.h
src/OrchestraUI/MenuBar/: MenuBar.cpp  MenuBar.h
src/OrchestraUI/NotationRenderer/: NotationComponent.cpp  NotationComponent.h  NotationRenderer.cpp  NotationRenderer.h
src/OrchestraUI/OrchestraEditor/: PluginEditor.cpp  PluginEditor.h
src/OrchestraUI/PianoRoll/: CustomPianoRoll.cpp  CustomPianoRoll.h  PianoRoll.cpp  PianoRoll.h
src/OrchestraUI/Sampler/: SamplerView.cpp  SamplerView.h
src/OrchestraUI/Views/: FamousWorksView.cpp  PluginEditor.h
src/PianoRoll/: CustomPianoRoll.cpp  CustomPianoRoll.h  PianoRoll.cpp  PianoRoll.h
src/Sampler/: OrchestraSound.cpp  OrchestraSound.h  OrchestraVoice.cpp  OrchestraVoice.h  Sampler.cpp  Sampler.h  SamplesManagement.cpp  SamplesManagement.h
src/UserInterface/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  FamousWorksView.cpp  FamousWorksView.h  InformationView.cpp  InformationView.h  InstrumentRangesView.cpp  InstrumentRangesView.h  PluginEditor.cpp  PluginEditor.h  QualitiesView.cpp  QualitiesView.h  TechniquesView.cpp  TechniquesView.h
src/ViewModels/: ViewModel.cpp  ViewModel.h
src/Views/: CustomComponent.cpp  CustomComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  CustomMenuBar.cpp  CustomMenuBar.h  FamousWorksView.cpp  FamousWorksView.h  InformationView.cpp  InformationView.h  InstrumentRangesView.cpp  InstrumentRangesView.h  InstrumentView.cpp  InstrumentView.h  PluginEditor.cpp  PluginEditor.h  QualitiesView.cpp  QualitiesView.h  SamplerView.cpp  SamplerView.h  TechniquesView.cpp  TechniquesView.h
tests/: CMakeLists.txt
tests/CoreManagerTest/: CoreManagerTest.cpp
tests/FileManagerTest/: FileManagerTest.cpp
tests/InstrumentTest/: HelperTest.cpp  InstrumentControllerTest.cpp  InstrumentInfoTest.cpp
tests/OrchestraCore.Tests/: CMakeLists.txt
tests/OrchestraCore.Tests/CoreManagerTest/: CoreManagerTest.cpp
tests/OrchestraCore.Tests/FileManagerTest/: FileManagerTest.cpp
tests/OrchestraCore.Tests/InstrumentTest/: InstrumentControllerTest.cpp  InstrumentInfoTest.cpp
tests/OrchestraCore.Tests/SamplerTest/: OrchestraSoundTest.cpp  OrchestraVoiceTest.cpp  SamplerIntegrationTest.cpp  SamplerTest.cpp
tests/OrchestraUI.Tests/: CMakeLists.txt
tests/SamplerTest/: SampleManagementTest.cpp  SamplerIntegrationTest.cpp  SamplerTest.cpp
